--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -1,27 +1,39 @@
 {
-  "Welcome to React": "مرحبا بكا في مكتبة رياكت للترجمة ",
+  "Welcome to React": "مرحبًا بك في عالم React",
   "navbar": {
-    "logo": "مكتبة"
+    "logo": "متعة القهوة"
   },
   "hero": {
-    "title": "قهوة بلفك",
-    "subTitle": "المذاق الأصلي للقهوة ,",
-    "desc": "عرض ترويجي للمذاق الاصلي للقوة في الوطم العربي ،عرض ترويجي للمذاق الاصلي للقوة في الوطم العربي  والإشارة ، والتطرق لجوة المنج المقدم والإشارة ، والتطرق لجوة المنج المقدم "
+    "title": "كأس بلفك",
+    "subTitle": "لعشاق نمط الحياة السوداء",
+    "desc": "اغمر نفسك في أناقة كأس بلفك المصممة لمن يقدرون التفاصيل الفاخرة. إنها ليست مجرد كأس، بل هي رمز للأناقة. جريئة، أنيقة، ومصممة لترتقي بأسلوب حياتك."
   },
   "services": {
-    "titleGray": "أنتعش مع",
-    "titleOrng": "كوب القهوة",
-    "desc": "عرض ترويجي للمذاق الاصلي للقوة في الوطم العربي ،عرض ترويجي للمذاق الاصلي للقوة في الوطم العربي  والإشارة ، والتطرق لجوة المنج المقدم والإشارة ، والتطرق لجوة المنج المقدم "
+    "titleGray": "قهوة طازجة",
+    "titleOrng": "ولذيذة",
+    "desc": "استمتع بقهوة محضرة بعناية من حبوب مختارة بعناية لتمنحك المذاق الأمثل والرائحة الفريدة. كل رشفة هي تجربة، محضرة بحب وشغف لجعل لحظات القهوة الخاصة بك لا تُنسى."
   },
   "whereToBuy": {
-    "title": "يمكنك طلب منتجاتنا من أي مكان ",
-    "btn": "أطلب الأن "
+    "title": "احصل على منتجاتنا في أي وقت ومن أي مكان",
+    "btn": "اطلب الآن"
   },
   "appBanner": {
-    "title": "حمل تطبيقنا ",
-    "desc": "حتى نكون اقرب اليكم ، يمكنكم تحميل تطبيقنا من اجل اكثر سلاسة  "
+    "title": "قم بتحميل تطبيقنا",
+    "desc": "خذ روح قهوتنا معك أينما ذهبت. قم بتحميل تطبيقنا لتجربة تسوق سلسة، عروض حصرية، والمزيد - كل ذلك بين يديك."
   },
   "footer": {
-    "logo": " مكتبة "
+    "title-1": "قهوة مصنوعة بإتقان، أجواء مريحة، ولحظات لا تُنسى",
+    "title-2": "هروبك المثالي مع الإسبرسو",
+    "location": "اعثر علينا على الخريطة",
+    "quickLinks": "روابط سريعة",
+    "link": {
+      "home": "الرئيسية",
+      "ourProduct": "منتجاتنا",
+      "order": "اطلب الآن",
+      "downloadApp": "قم بتحميل تطبيقنا"
+    },
+    "address": "العنوان",
+    "local": "نويدا، أوتار براديش",
+    "phone": "+91 1234567890"
   }
 }
