--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -1,29 +1,34 @@
 {
-  "Welcome to React": "مرحبًا بك في عالم React",
+  "Welcome to React": "استمتع بأروع نكهات الآيس كريم، مباشرة من Frostella!",
   "navbar": {
-    "logo": "متعة القهوة"
+    "logo": "Frostella"
   },
   "hero": {
-    "title": "كأس بلفك",
-    "subTitle": "لعشاق نمط الحياة السوداء",
-    "desc": "اغمر نفسك في أناقة كأس بلفك المصممة لمن يقدرون التفاصيل الفاخرة. إنها ليست مجرد كأس، بل هي رمز للأناقة. جريئة، أنيقة، ومصممة لترتقي بأسلوب حياتك."
+    "title": "فروس تيلا",
+    "prix": "السعر:",
+    "unit": "دج",
+    "subTitle": "نكهات مبتكرة، مكونات طبيعية 100%، وتجربة لذيذة لا تُنسى."
   },
   "services": {
-    "titleGray": "قهوة طازجة",
-    "titleOrng": "ولذيذة",
-    "desc": "استمتع بقهوة محضرة بعناية من حبوب مختارة بعناية لتمنحك المذاق الأمثل والرائحة الفريدة. كل رشفة هي تجربة، محضرة بحب وشغف لجعل لحظات القهوة الخاصة بك لا تُنسى."
+    "servis-1": {
+      "titleGray": "نكهات مذهلة للاستمتاع بها ",
+      "titleOrng": "على الطاولة",
+      "desc": "تذوق السعادة في كل ملعقة. اختر من بين نكهاتنا الفريدة المصنوعة بحب وإتقان."
+    },
+    "servis-2": {
+      "titleGray": "نكهات تعبق بالسعادة،",
+      "titleOrng": "الآن في علب جاهزة",
+      "desc": "استمتع بمذاق Frostella في أي مكان. منتجاتنا المعلبة مصممة لتصل إلى أبعد المسافات."
+    }
   },
   "whereToBuy": {
-    "title": "احصل على منتجاتنا في أي وقت ومن أي مكان",
+    "title": "قم بزيارتنا في أحد نقاط البيع الثلاثة لدينا واستفد من تجربة رائعة ولذيذة",
     "btn": "اطلب الآن"
   },
-  "appBanner": {
-    "title": "قم بتحميل تطبيقنا",
-    "desc": "خذ روح قهوتنا معك أينما ذهبت. قم بتحميل تطبيقنا لتجربة تسوق سلسة، عروض حصرية، والمزيد - كل ذلك بين يديك."
-  },
+
   "footer": {
-    "title-1": "قهوة مصنوعة بإتقان، أجواء مريحة، ولحظات لا تُنسى",
-    "title-2": "هروبك المثالي مع الإسبرسو",
+    "title-1": "تجربة آيس كريم استثنائية تجمع بين الإبداع والجودة",
+    "title-2": "نكهات مبتكرة، مكونات طبيعية 100%، وتجربة لذيذة لا تُنسى",
     "location": "اعثر علينا على الخريطة",
     "quickLinks": "روابط سريعة",
     "link": {
@@ -33,7 +38,7 @@
       "downloadApp": "قم بتحميل تطبيقنا"
     },
     "address": "العنوان",
-    "local": "نويدا، أوتار براديش",
-    "phone": "+91 1234567890"
+    "local": "سييج برينسيبال - الجزائر",
+    "phone": "+213 21 123 456"
   }
 }
