--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -25,7 +25,10 @@
     "title": "قم بزيارتنا في أحد نقاط البيع الثلاثة لدينا واستفد من تجربة رائعة ولذيذة",
     "btn": "اطلب الآن"
   },
-
+  "order": {
+    "title": "إذا كنت صاحب محل تجاري أو مطعم وتريد ان تكون مثلجتنا ضمن منتجاتك يسرنا توفيرها لك بأسعار تنافسية ",
+    "btn": "اطلب الآن"
+  },
   "footer": {
     "title-1": "تجربة آيس كريم استثنائية تجمع بين الإبداع والجودة",
     "title-2": "نكهات مبتكرة، مكونات طبيعية 100%، وتجربة لذيذة لا تُنسى",
