--- a/public/locale/fr/translation.json
+++ b/public/locale/fr/translation.json
@@ -29,6 +29,10 @@
     "title": "Download Our App",
     "desc": "Take the essence of our coffee with you wherever you go. Download our app for a seamless shopping experience, exclusive offers, and more—right at your fingertips."
   },
+  "order": {
+    "title": "Si vous êtes propriétaire d'un magasin ou d'un restaurant et que vous souhaitez que nos glaces fassent partie de vos produits, nous sommes heureux de vous les proposer à des prix compétitifs.",
+    "btn": "Commandez ..."
+  },
   "footer": {
     "title-1": "Une expérience glacée exceptionnelle combinant créativité et qualité.",
     "title-2": "Des saveurs innovantes, des ingrédients 100 % naturels, et une expérience inoubliable.",
