--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -1,47 +1,143 @@
 {
-  "Welcome to React": "استمتع بأروع نكهات الآيس كريم، مباشرة من Frostella!",
-  "navbar": {
-    "logo": "Frostella"
-  },
   "hero": {
-    "title": "فروس تيلا",
-    "prix": "السعر:",
-    "unit": "دج",
-    "subTitle": "نكهات مبتكرة، مكونات طبيعية 100%، وتجربة لذيذة لا تُنسى."
+    "title": "  Genitech - جيني تك",
+    "suTitle": "الإبتكار بعبقرية والتنفيذ بإحترافية",
+    "desc": " نؤمن بأن التكنولوجيا ليست مجرد أداة، بل هي وسيلة لتحقيق الإبداع والتميز. من خلال دمج العبقريّة التقنية مع الحلول المبتكرة، نساعد الشركات على تحقيق أهدافها الرقمية",
+    "btn-1": "إكتشف المزيد",
+    "btn-2": "إكتشف المزيد"
   },
-  "services": {
-    "servis-1": {
-      "titleGray": "نكهات مذهلة للاستمتاع بها ",
-      "titleOrng": "على الطاولة",
-      "desc": "تذوق السعادة في كل ملعقة. اختر من بين نكهاتنا الفريدة المصنوعة بحب وإتقان."
+  "link": {
+    "home": "الرئيسية",
+    "about": "من نحن ",
+    "services": "خدماتنا",
+    "blog": "المدونة",
+    "contact": "الإتصال",
+    "btn": "إستشر الأن "
+  },
+  "Statistic": {
+    "box-1": {
+      "nub": "+ 10",
+      "desc": " سنوات من الخبرة في المجال"
     },
-    "servis-2": {
-      "titleGray": "نكهات تعبق بالسعادة،",
-      "titleOrng": "الآن في علب جاهزة",
-      "desc": "استمتع بمذاق Frostella في أي مكان. منتجاتنا المعلبة مصممة لتصل إلى أبعد المسافات."
+    "box-2": {
+      "nub": "4.9/5",
+      "desc": "متوسط تقييم عملائنا"
+    },
+    "box-3": {
+      "nub": "+ 10.000",
+      "desc": "تنزيل لتطبيقات عملائنا"
+    },
+    "box-4": {
+      "nub": "+ 80 %",
+      "desc": "من عملائنا يعودون للعمل معنا "
+    },
+    "box-5": {
+      "nub": "+ 25",
+      "desc": "عميل راضيا عن خدماتنا"
+    },
+    "box-6": {
+      "nub": "7/24",
+      "desc": "متواجدون لخدمتكم"
+    },
+    "box-7": {
+      "nub": "+ 10.000",
+      "desc": "زيارة لمواقع عملائنا "
+    },
+    "box-8": {
+      "nub": "+ 99 %",
+      "desc": "نسبة إستقرار مشاريعنا"
     }
   },
-  "whereToBuy": {
-    "title": "قم بزيارتنا في أحد نقاط البيع الثلاثة لدينا واستفد من تجربة رائعة ولذيذة",
-    "btn": "اطلب الآن"
+  "services": {
+    "heroTitle": "نوفر لك أكثر من مجرد خدمة...",
+    "heroTitle2": "نحن نبتكر حلولًا رقمية تُحدث الفرق!",
+    "servis-1": {
+      "title": "تطوير تطبيقات الموبايل",
+      "desc": "نحوّل أفكارك إلى تطبيقات ناجحة بتصميم أنيق وأداء سريع. سواء كنت ترغب في زيادة المبيعات أو تحسين تجربة العملاء، نقدم لك الحل الأمثل!"
+    },
+    "servis-2": {
+      "title": "تطوير المواقع الإلكترونية",
+      "desc": "موقعك هو واجهتك الرقمية، ونحن نصمّم ونطوّر مواقع احترافية بأحدث التقنيات لتكون متجاوبة وسريعة، مما يساعدك على جذب العملاء وزيادة الأرباح."
+    },
+    "servis-3": {
+      "title": "تطوير تطبيقات سطح المكتب",
+      "desc": "نقدّم حلولًا برمجية ذكية تساعدك على إدارة أعمالك بكفاءة، عبر تطبيقات سطح مكتب قوية وآمنة مصممة خصيصًا لاحتياجاتك."
+    },
+    "servis-4": {
+      "title": "تصميم الشعارات والهويات البصرية UI/UX",
+      "desc": "نصمم لك هوية بصرية تعكس علامتك التجارية بلمسة احترافية، لتعزز ثقة العملاء وتجذب الانتباه."
+    }
   },
-  "order": {
-    "title": "إذا كنت صاحب محل تجاري أو مطعم وتريد ان تكون مثلجتنا ضمن منتجاتك يسرنا توفيرها لك بأسعار تنافسية ",
-    "btn": "اطلب الآن"
+  "about": {
+    "title-1": "فريق جيني تك",
+    "title-2": "هو القوة الدافعة وراء كل نجاح.",
+    "desc": "نضم فريقًا من المحترفين الذين يعملون معًا لتحقيق نجاح عملائنا باستخدام أفضل التقنيات والحلول.",
+    "sport": {
+      "title": "أحسن خدمة",
+      "desc": "ملتزمون بتوفير الجودة"
+    },
+    "service": {
+      "title": "24/7 اتصل بالدعم",
+      "desc": "متواجدون في كل الأوقات "
+    }
+  },
+  "product": {
+    "title": "منتجاتنا الرقمية ",
+    "title2": "حلول مبتكرة في متناول يدك",
+    "desc": "اكتشف مجموعتنا الحصرية من المنتجات الرقمية المصممة لتسهيل أعمالك وتعزيز حضورك الرقمي. حلول متكاملة بأعلى معايير الجودة، جاهزة للاستخدام فورًا!",
+    "btn": "إقرأ  المزيد"
+  },
+  "profil": {
+    "title": "اكتشف كيف ساعدت",
+    "span": "جيني تك",
+    "title2": "عملاءها في تحقيق أهدافهم الرقمية من خلال حلول مبتكرة.",
+    "btn": "إقرأ  المزيد"
+  },
+  "blogComp": {
+    "title": "مدونتنا ",
+    "span": "| نافذتك إلى أحدث الابتكارات والتقنيات",
+    "btn": "عرض  المزيد"
+  },
+  "contact": {
+    "title": "كيف يمكننا خدمتك ؟",
+    "name": "الاسم",
+    "email": "البريد الإلكتروني ",
+    "sub": "الموضوع",
+    "phone": "رقم الهاتف ",
+    "messege": "الرسالة ",
+    "send": "إرسال"
+  },
+
+  "summary": {
+    "title": " نحول الأفكار إلى واقع رقمي!",
+    "desc-1": "في عالم يتغير بسرعة هائلة، لم يعد الدخول إلى الفضاء الرقمي مجرد خيار، بل أصبح ضرورة. لكن السؤال الحقيقي هو: كيف تجعل وجودك الرقمي مميزًا؟ هنا يأتي دورنا! نحن لا نقدم حلولًا تقليدية، بل نصنع تجارب رقمية متكاملة تنقل علامتك التجارية إلى مستوى آخر.",
+    "desc-2": "نبدأ بفهم رؤيتك، نحولها إلى تصميم يعكس جوهر علامتك، ثم نبني لك موقعًا أو تطبيقًا لا يقتصر فقط على الجمال البصري، بل يتمتع بأداء سلس وتجربة مستخدم استثنائية. من المواقع الإلكترونية التي تُجذب الزوار وتحوّلهم إلى عملاء، إلى تطبيقات الموبايل وسطح المكتب التي تجعل التواصل مع جمهورك أكثر سهولة وكفاءة، نحرص على أن يكون لكل تفصيل معنى وقيمة. وحتى لا يكون حضورك الرقمي مجرد واجهة، نكمل رحلتك بتصميم هوية بصرية تجعل علامتك تترك أثرًا قويًا، من الشعار إلى أدق التفاصيل.",
+    "desc-3": "لكن القصة لا تتوقف هنا! نحن لا نبني حلولًا جامدة، بل نبتكر منظومات تفاعلية تعكس احتياجاتك الفعلية وتمنحك ميزة تنافسية حقيقية. نحن نؤمن بأن التكنولوجيا ليست مجرد أدوات، بل وسيلة لإحداث فرق، وسلاحًا يساعدك على التميز في سوق مزدحم بالمنافسين. عندما تبدأ رحلتك معنا، لن تكون مجرد عميل، بل شريكًا في رحلة إبداعية تمزج بين الفن والتقنية لتقديم شيء استثنائي.",
+    "text": "نبدأ بفهم رؤيتك، نحولها إلى تصميم يعكس جوهر علامتك، ثم نبني لك موقعًا أو تطبيقًا لا يقتصر فقط على الجمال البصري، بل يتمتع بأداء سلس وتجربة مستخدم استثنائية. من المواقع الإلكترونية التي تُجذب الزوار وتحوّلهم إلى عملاء، إلى تطبيقات الموبايل وسطح المكتب التي تجعل التواصل مع جمهورك أكثر سهولة وكفاءة، نحرص على أن يكون لكل تفصيل معنى وقيمة. وحتى لا يكون حضورك الرقمي مجرد واجهة، نكمل رحلتك بتصميم هوية بصرية تجعل علامتك تترك أثرًا قويًا، من الشعار إلى أدق التفاصيل."
   },
   "footer": {
-    "title-1": "تجربة آيس كريم استثنائية تجمع بين الإبداع والجودة",
-    "title-2": "نكهات مبتكرة، مكونات طبيعية 100%، وتجربة لذيذة لا تُنسى",
-    "location": "اعثر علينا على الخريطة",
-    "quickLinks": "روابط سريعة",
-    "link": {
-      "home": "الرئيسية",
-      "ourProduct": "منتجاتنا",
-      "order": "اطلب الآن",
-      "downloadApp": "قم بتحميل تطبيقنا"
+    "desc": "نحن نؤمن بأن التكنولوجيا ليست مجرد أدوات بل وسيلة لإحداث فرق، وسلاحًا يساعدك على التميز في سوق مزدحم بالمنافسين. عندما تبدأ رحلتك معنا، لن تكون مجرد عميل، بل شريكًا في رحلة إبداعية تمزج بين الفن والتقنية لتقديم شيء استثنائي.",
+    "service": {
+      "title": "خدماتنا",
+      "srv-1": "تطوير تطبيقات الموبايل",
+      "srv-2": "تطوير المواقع الإلكترونية",
+      "srv-3": "تطوير تطبيقات سطح المكتب",
+      "srv-4": "تصميم الشعارات والهويات البصرية",
+      "srv-5": "تصميم الواجهات"
     },
-    "address": "العنوان",
-    "local": "سييج برينسيبال - الجزائر",
-    "phone": "+213 21 123 456"
+    "links": {
+      "title": "روابطـــنا",
+      "link-1": "الرئيسيــــة ",
+      "link-2": "من نحــــن",
+      "link-3": "المدونــــة",
+      "link-4": "إتصل بــــنا",
+      "link-5": "الخصوصية والسياسة"
+    },
+    "contact": {
+      "title": "تواصل معنا",
+      "add": "دمشق، شارع الحمراء، مبنى رقم 25، الطابق الثالث",
+      "phone": "+963 944 567890",
+      "email": "info@yourcompany-sy.com"
+    }
   }
 }
