--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -107,7 +107,9 @@
     "messege": "الرسالة ",
     "send": "إرسال"
   },
-
+  "contact-2": {
+    "desc": "هل لديك استفسار أو ترغب في طلب خدمة ؟ تواصل معنا الآن، سواء للحصول على استشارة، معرفة التفاصيل، أو البدء في مشروعك! فريق الدعم لدينا جاهز للرد عليك بأقصى سرعة وتقديم المساعدة التي تحتاجها."
+  },
   "summary": {
     "title": " نحول الأفكار إلى واقع رقمي!",
     "desc-1": "في عالم يتغير بسرعة هائلة، لم يعد الدخول إلى الفضاء الرقمي مجرد خيار، بل أصبح ضرورة. لكن السؤال الحقيقي هو: كيف تجعل وجودك الرقمي مميزًا؟ هنا يأتي دورنا! نحن لا نقدم حلولًا تقليدية، بل نصنع تجارب رقمية متكاملة تنقل علامتك التجارية إلى مستوى آخر.",
@@ -138,6 +140,50 @@
       "add": "دمشق، شارع الحمراء، مبنى رقم 25، الطابق الثالث",
       "phone": "+963 944 567890",
       "email": "info@yourcompany-sy.com"
+    }
+  },
+  "phoneApp": {
+    "hero": {
+      "title": " جيني تك",
+      "suTitle": "حوّل فكرتك إلى تطبيق ناجح!",
+      "desc": "نقدم لك خدمة احترافية في تصميم وتطوير تطبيقات الهواتف الذكية لأنظمة Android و iOS، بتجربة مستخدم سلسة وأداء فائق يضمن سرعة الاستجابة والاستقرار. سواء كنت ترغب في إطلاق تطبيق تجاري، متجر إلكتروني، منصة تعليمية، أو تطبيق خدمات مخصصة، فإننا نوفر لك حلولًا ذكية بتصميم عصري وتقنيات متقدمة لضمان تجربة استخدام ممتعة لعملائك",
+      "btn-1": "إكتشف المزيد",
+      "btn-2": "ابدأ الآن"
+    },
+    "why": {
+      "title": "لماذا تحتاج إلى تطبيق موبايل؟",
+      "desc": "في عالم اليوم، أصبح الهاتف الذكي جزءًا أساسيًا من حياة الجميع، ومعه باتت التطبيقات أداة فعالة لتعزيز نمو الأعمال، تحسين تجربة العملاء، وتحقيق أرباح مستدامة. امتلاك تطبيق موبايل ليس مجرد رفاهية، بل هو استثمار ضروري يُمكن أن يُحدث فارقًا كبيرًا في نجاح مشروعك.",
+      "box-1": "ميزة تنافسية قوية",
+      "box-2": "رفع معدلات المبيعات والأرباح",
+      "box-3": "الوصول إلى جمهور أوسع",
+      "box-4": "توفير تجربة مستخدم متميزة"
+    },
+    "Features": {
+      "title": "مميزات تطوير التطبيقات معنا",
+      "desc1": "نحن نحرص على تقديم تطبيقات بواجهات جذابة وسهلة الاستخدام، تضمن تجربة سلسة للمستخدمين. نهتم بكل التفاصيل، من اختيار الألوان والخطوط إلى تصميم تفاعلات ذكية تجعل التطبيق أكثر جاذبية وفعالية.",
+      "desc2": "سواء كنت تستهدف مستخدمي Android أو iOS، نضمن لك تطبيقًا متوافقًا مع جميع الأجهزة بأداء فائق. نعتمد أحدث التقنيات لضمان تشغيل مستقر وسلس، مع تحسين مستمر لتعزيز سرعة وكفاءة التطبيق.",
+      "desc3": "رحلتك معنا لا تنتهي بعد الإطلاق، بل نستمر في تقديم دعم فني مستمر لضمان استقرار التطبيق وحل أي مشكلات تقنية. كما نوفر تحديثات دورية لإضافة ميزات جديدة وتحسين الأداء بما يتناسب مع تطور احتياجات عملك."
+    },
+
+    "steps": {
+      "title": "خطوات العمل معنا",
+      "desc": "من لحظة مشاركة فكرتك، نعمل بأسلوب منهجي لتحويلها إلى تطبيق احترافي بأفضل أداء. إليك كيف نقوم بذلك:",
+      "step-1": {
+        "title": "1. التحليل والتخطيط",
+        "desc": "نبدأ بفهم رؤيتك ودراسة احتياجاتك، ثم نحدد الميزات الأساسية ونضع خارطة طريق واضحة لضمان تنفيذ سلس ومنظم."
+      },
+      "step-2": {
+        "title": "2. التصميم (UI/UX)",
+        "desc": "نركز على تجربة المستخدم (UX) لتوفير تنقل سلس داخل التطبيق، ثم نصمم واجهات جذابة تعكس هوية مشروعك."
+      },
+      "step-3": {
+        "title": "3. التطوير والبرمجة",
+        "desc": "نستخدم أحدث تقنيات البرمجة لإنشاء تطبيق سريع، مستقر، وآمن يعمل على مختلف الأنظمة الأساسية (iOS، Android، والويب)."
+      },
+      "step-4": {
+        "title": "4. الاختبار والإطلاق",
+        "desc": "نخضع التطبيق لاختبارات دقيقة لضمان خلوه من الأخطاء، ثم نطلقه رسميًا مع تقديم دعم مستمر وتحديثات مستقبلية."
+      }
     }
   }
 }
